--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,27 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+h1,h2,h3,h4,h5,h6 {
+    line-height: 1.5;
+    font-family: 'Merriweather',sans-serif;
+    color: #2f343b;
+    font-weight: 900;
+}
+.sidebar{
+  width:300px;
+  z-index: 100;
+  position: fixed;
+  background-color: white;
+  height: 100vh;
+  box-shadow: 3px 6px 9px #e1e1e1;
+}
 .feed-display {
-  border-left:2px solid;
+  /*border-left:2px solid;*/
   text-align: center;
 }
 .url-form{
-  border-bottom:2px solid;
+  /*border-bottom:2px solid;*/
+  margin-top: 55px;
   padding: 10px;
   display: flex;
   justify-content: space-between;
@@ -19,6 +34,7 @@ body {
   border:1px solid gray;
   border-radius: 5px;
   display: flex;
+  width: calc(100% - 40px);
   justify-content: space-between;
 }
 .feed-list-item.active {
@@ -28,9 +44,72 @@ body {
   color:red;
 }
 .feed-card {
+  float: left;
+  padding: 0 30px;
   text-align: left;
-  padding: 10px;
-  margin:10px;
-  border:1px solid #ebebeb;
-  box-shadow: 3px 6px 9px #e1e1e1;
+  min-height: 500px;
+  font-size: 18px;
+}
+.feed-card a {
+  color: #2f343b;
+}
+.blog-heading{
+  margin:100px 0;
+  text-align: left;
+}
+.article-heading{
+    font-size: 26px;
+    margin: 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+.description {
+  line-height: 32px;
+  height:200px;
+  overflow: hidden;
+}
+header {
+    background: none;
+    height: 55px;
+    line-height: 55px;
+    border-bottom: 1px solid #f5f5f5;
+    background: #fff;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 999999;
+}
+.logo {
+  font-family: 'Roboto Slab','Lato',serif;
+  font-weight: bold;
+  border-bottom: 0;
+  font-size: 20px;
+  color: #555;
+  display: inline-block;
+  margin: 0 10px;
+}
+.hamburger-menu{
+  margin: 0 30px;
+  cursor: pointer;
+}
+.blog-link{
+  word-break: break-all;
+  color: #2f343b;
+}
+@media (max-width: 767px) {
+  .sidebar {
+    width:300px;
+  }
+}
+@media (min-width:768px) and (max-width:992px){
+  .sidebar {
+    width:400px;
+  }
+}
+@media (min-width:992px){
+  .sidebar {
+    width:33.3%;
+  }
 }
